Fix project image stretch

--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -3,7 +3,8 @@
   height: 8rem;
   margin-bottom: 1rem;
   border-radius: 1rem;
-  background-color: hsl(0, 0%, 50%);
+  background-color: #222;
+  object-fit: contain;
 }
 
 .doubleButton {
